spec/fail/bad-dotted-form.scm
; A dotted form with no preceding elements is a reader error
(. "test")
